# MRS-Project

qr_detector/: CMakeLists.txt  package.xml
qr_detector/include/qr_detector/: qr_detector_nodelet.h
qr_detector/launch/: combined.launch  detector.launch  minimal_3dsensor.launch
qr_detector/scripts/: conf_move (copy).py  conf_move.py  robot.py
qr_detector/src/: detector.cpp  qr_detector_nodelet.cpp
